# papi

./: .gitignore  README.md  conftest.py  data.csv  exam_questions.txt  exam_questions_new.txt  main.py  papi.db  pyproject.toml  requirements.txt
backend/api/: endpoints.py  main.py  schemas.py
backend/api/dependencies/: auth.py  case.py  case_service.py  chat.py  chat_service.py  database.py  database_service.py  llm.py  storage.py
backend/api/routers/: auth.py  cases.py  chat.py  users.py  utils.py
backend/api/schemas/: auth.py  case.py  chat.py  prompt.py  qanda.py  user.py
backend/config/: environment.py  settings.py
backend/database/: init_db.py  models.py
backend/database/cache/: models.py  redis.py
backend/database/persistent/: config.py  init_db.py  models.py  reset.sh  seed.py
backend/handler/database/: database_handler.py
backend/handler/llm/: llm_exceptions.py  llm_handler.py  main.py  main_async.py
backend/handler/session/: session_manager.py
backend/handler/storage/: file_converter.py  storage_handler.py
backend/llm_apis/: openai_client.py
backend/modules/cases/: case_handler.py  file_converter.py
backend/modules/chat/: chat_handler.py
backend/services/: __init__.py  async_test.py  case_service.py  chat_service.py  database_service.py  document_processor.py  llm_service.py  storage_service.py
backend/tests/: conftest.py
backend/user_documents/: ingest_pdf.py
backend/utils/: password_utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
tests/unit/: openai_client_test.py
(+34 files in other folders)
